[package]
name = "marmalade"
version = "0.0.1"
edition = "2021"
description = "A small toolkit for video games on the web"
license = "MPL-2.0"
repository = "https://github.com/puzzle-rs/marmalade"
homepage = "https://github.com/puzzle-rs/marmalade"
readme = "README.md"
categories = ["game-development", "graphics", "gui"]
keywords = ["gamedev", "web"]

[dependencies]
fontdue = "0.7.3"
futures-channel = "0.3.28"
futures-util = "0.3.28"
glam = "0.24.1"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "HtmlImageElement",
    "Window",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "AddEventListenerOptions",
    "HtmlCanvasElement",
    "OffscreenCanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebSocket",
    "MessageEvent",
    "Document",
    "BinaryType",
    "OffscreenCanvas",
    "Performance",
    "CssStyleDeclaration",
    "ImageBitmap",
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioDestinationNode",
    "GainNode",
    "AudioParam",
    "Blob",
] }
