[package]
name = "marmalade"
version = "0.0.1"
edition = "2021"
description = "A small toolkit for video games on the web"
license = "MPL-2.0"
repository = "https://github.com/puzzle-rs/marmalade"
homepage = "https://github.com/puzzle-rs/marmalade"
readme = "README.md"
categories = ["game-development", "graphics", "gui"]
keywords = ["gamedev", "web"]

[dependencies]
fontdue = "0.8.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
glam = "0.25.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "HtmlImageElement",
    "Window",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "AddEventListenerOptions",
    "HtmlCanvasElement",
    "OffscreenCanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebSocket",
    "MessageEvent",
    "Document",
    "BinaryType",
    "OffscreenCanvas",
    "Performance",
    "CssStyleDeclaration",
    "ImageBitmap",
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioDestinationNode",
    "GainNode",
    "AudioParam",
    "Blob",
] }
